记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-23-CTFLearn.md
+++ b/docs/views/numerology/2025-01-23-CTFLearn.md
@@ -57,6 +57,8 @@ publish: true
 
 ## 传输数据-编码型&加密型等
 
+Base64是编码，MD5是加密。
+
 ### 演示案例1：
 
 我们尝试搜索`inurl:id=mq==`，找到如下地址的网页：
@@ -71,7 +73,7 @@ https://indialms.in/wfp_login.php?r_id=MQ==
 https://indialms.in/wfp_login.php?r_id=1
 ```
 
-这里`MQ==`，通过加密编码工具解码以后，得出的结果就是`1`
+这里`MQ==`，通过加密编码工具【[CaptfEncoder](https://github.com/guyoung/CaptfEncoder)】解码以后，得出的结果就是`1`
 
 ![image-20250122205147741](/img/ctfLearn/image-20250122205147741.png)
 
@@ -221,8 +223,212 @@ https://indialms.in/wfp_login.php?r_id=1
 
 密码存储-Web&系统&三方应用
 
-### 案例演示：
+### 案例演示-zzcms：
 
 用phpStudy搭建zzcms网站，搭建过程不再详细赘述，结果如下图所示：
 
 ![image-20250122232338372](/img/ctfLearn/image-20250122232338372.png)
+
+在搭建的时候配置了数据库，这里数据库名zzcms，用户名zzcms，密码123456。我们用工具连接数据库，我电脑中现有的已经安装好可以用的有DataGrip，视频中演示的是Navicat，都是数据库连接工具，没有太大区别。
+
+> DataGrip 是一款数据库管理客户端工具，方便的连接到数据库服务器，执行sql语句、创建表、创建索引以及导出数据等。DataGrip 支持几乎所有主流的关系数据库产品，如 DB2、Derby、H2、MySQL、Oracle、PostgreSQL、SQL Server、Sqllite 及 Sybase 等，并且提供了简单易用的界面，开发者上手几乎不会遇到任何困难。
+
+![image-20250123203834697](/img/ctfLearn/image-20250123203834697.png)
+
+我们的数据库在虚拟机中，记得需要修改user表中的root用户的host字段，主要用到的SQL语句是：
+
+```sql
+update user set host='%' where name='root'
+```
+
+如果还是连接不上，可以参考【[教程](https://blog.csdn.net/sinat_42338962/article/details/108832723)】
+
+
+
+在数据库中，找到`zzcms_admin`这张表，我们可以看到密码是一串密文：
+
+![image-20250123204307995](/img/ctfLearn/image-20250123204307995.png)
+
+我们用【[CMD5](https://www.cmd5.org/)】工具进行解密，得到结果123456，我们进入到这个网站的后台管理系统，
+
+```
+http://192.168.8.21:8099/admin/login.php
+```
+
+用户名和密码是的admin和123456，我们可以成功进入后台管理系统。当然，我们也可以在数据库中将123456加密后的结果改成其他的经过md5加密后的密码。
+
+**结论：**zzcms的后台管理系统的密码加密方式是md5。
+
+
+
+### 案例演示-dz3.2：
+
+部署Discuzx32到phpStudy的的WWW目录下，然后在phpStudy工具中添加网站，这里需要特别注意选php的5.4.45版本来支撑：
+
+![image-20250123211547792](/img/ctfLearn/image-20250123211547792.png)
+
+进入页面后进行设置，数据库名ultrax，用户名ultrax，密码123456，管理员账号admin，密码123456
+
+我们还是用DataGrip连接找到这个ultrax数据库，找到用户这张表`pre_common_member`：
+
+![image-20250123212509551](/img/ctfLearn/image-20250123212509551.png)
+
+此外，还有一张`pre_ucenter_members`的表里也有password这个字段：
+
+![image-20250123212704727](/img/ctfLearn/image-20250123212704727.png)
+
+我们尝试解密`pre_ucenter_members`表里admin对应的密码，发现是以下情况，解密不出来：
+
+![image-20250123212851387](/img/ctfLearn/image-20250123212851387.png)
+
+解密不出来是因为没有加salt，俗称加盐了，我们加上数据库中的salt的值，得到`436be0fda967bc85b0245107002a835e:4241a1`，这样就能解开了：
+
+![image-20250123213210339](/img/ctfLearn/image-20250123213210339.png)
+
+**结论：**
+
+- 刚才的zzcms是直接把123456加密，即`md5(123456)`
+- 这里的Discuzx32的密码加密是md5加密再连接盐，即`md5(md5($pass).$salt)`
+
+> 这个操作先对用户输入的明文密码 `$pass` 进行一次 `md5` 加密，接着把加密结果和盐值 `$salt` 连接起来，最后再对这个连接后的字符串进行一次 `md5` 加密。这样做能进一步增强密码的安全性。
+
+
+
+### 案例演示-dz3.5：
+
+部署Discuzx35到phpStudy的的WWW目录下，然后在phpStudy工具中添加网站，这里可以选php的7.3.4版本来支撑：
+
+![image-20250123215752865](/img/ctfLearn/image-20250123215752865.png)
+
+进入页面后进行设置，数据库名ultrax35，用户名ultrax35，密码123456，管理员账号admin，密码123456
+
+![image-20250123215600481](/img/ctfLearn/image-20250123215600481.png)
+
+发现数据库里的密码变成了新的`$2y$10$gf1l7pnn5kp/TkRWJaGpyuaY2UQh4VsOp66vSEoxz0ev9sEhCZrsu`，且加盐salt的字段变为空了
+
+
+
+**结论：**
+
+如果要解密这个密码，需要同时满足几种条件才可以，我们用【[CaptfEncoder](https://github.com/guyoung/CaptfEncoder)】工具打开AES加密选项
+
+![image-20250123220403525](/img/ctfLearn/image-20250123220403525.png)
+
+这个我们需要满足以上这几个条件才能解出来，一般这些都是写在源码里，不会出现在数据库里。
+
+
+
+### 思考
+
+如果我们在做安全测试的时候，使用到了AES加密，比如对请求体中传输的数据进行加密，我们是没法进行渗透测试的，因为我们密文都解不出来。一般是我们能对数据进行解密才挖漏洞，如果见到这种解不开的加密数据就不需要看了。
+
+
+
+### 特征
+
+- MD5值是32或16位由数字“0-9”和字母”a-f“所组成的字符串
+- SHA1这种密文特征跟MD5差不多，不过位数是40
+- NTLM这种加密是Windows的哈希密码，标准通讯安全协议
+- AES，DES，RC4这些都是非对称加密算法，引入密钥，密文特征和Base64类似
+
+
+
+### 案例演示-系统的加密方式：
+
+我们用工具【[Mimikatz教程](https://blog.csdn.net/weixin_40412037/article/details/113348310)】(不建议在物理机安装，会被标记为病毒)，输入以下命令：
+
+```shell
+privilege::debug
+sekurlsa::logonpasswords
+```
+
+![image-20250123223306898](/img/ctfLearn/image-20250123223306898.png)
+
+从返回信息中找到当前用户名，这里有NTLM的哈希值`31d6cfe0d16ae931b73c59d7e0c089c0`
+
+我们将这个密文尝试解密，发现真的可以解，只不过我这里的密码是空密码，所以解开也显示是空密码：
+
+![image-20250123223555511](/img/ctfLearn/image-20250123223555511.png)
+
+同样的，我们在Linux可以通过查看`cat /etc/shadow`，找到对应的密码，这里aubin就是我的用户名：
+
+![image-20250123224311346](/img/ctfLearn/image-20250123224311346.png)
+
+我们将其复制出来到【[CMD5](https://www.cmd5.org/)】尝试解密：
+
+![image-20250123225941755](/img/ctfLearn/image-20250123225941755.png)
+
+**结论：**
+
+- 网站有他常见的加密方式、系统有他固定的加密方式，有些解密不出来可能是因为太复杂。
+- MD5为什么有的可以解，有的不可以解？因为MD5是不可逆向的。
+- 现在大部分的解密都是碰撞式解密，不是算法的算法的逆向还原原理。
+- 平台的解密思路就是去逐位碰撞，暴力破解。有些解密不出来就是密码太复杂不好碰撞。
+
+
+
+### 案例演示-数据库的加密方式：
+
+我们找到MySQL的mysql数据库下，有一张叫`user`的表，表里的`authentication_string`就是密文：
+
+![image-20250123231232402](/img/ctfLearn/image-20250123231232402.png)
+
+将这个值复制出来，我们尝试到【[CMD5](https://www.cmd5.org/)】解密，确实能够解密出来，隐私问题我打码了：
+
+![image-20250123231413577](/img/ctfLearn/image-20250123231413577.png)
+
+这里标注的类型是MySql5，各个应用的加密方式都可能不太一样，我们只能讲几种常见的，可能换了以后就解密不出来了。
+
+加密是在写程序的时候自己定义的，比如我们md5在加盐的形式上再加盐，也是种自定义的加密方式。
+
+
+
+### 识别算法编码方法：
+
+1. 看密文位数
+2. 看密文的特征（数字、字母、大小写、符号等）
+3. 看当前密文存在的地方（Web、数据库、操作系统等应用），产生地方不一样就有不一样的加密方式。
+
+
+
+### 影响：
+
+安全后渗透测试，即我们得到了账号密码，想要去尝试登录后台，但密码的加密方式解不出来，我们就登录不了
+
+
+
+### 挖坑
+
+以后我们要学习如果用平台或工具解密不出来的，有没有其他的方式解出来，比如爆破、字典等。
+
+
+
+## 代码特性混淆-开发语言
+
+代码混淆-源代码加密&逆向保护
+
+### 案例演示-PHP&JS混淆加密
+
+
+
+### 案例演示-EXE&JAR代码保护
+
+
+
+## 拓展补充参考资料：
+
+### 部分资源：
+
+- https://www.cmd5.com
+- http://www.jsfuck.com
+- http://www.hiencode.com
+- http://www.phpjm.net/
+- http://tool.chacuo.net/cryptaes
+- https://utf-8.jp/public/aaencode.html
+
+### 前人经验总结
+
+- 【[30余种加密编码类型的密文特征分析](https://mp.weixin.qq.com/s?__biz=MzAwNDcxMjI2MA==&mid=2247484455&idx=1&sn=e1b4324ddcf7d6123be30d9a5613e17b&chksm=9b26f60cac517f1a920cf3b73b3212a645aeef78882c47957b9f3c2135cb7ce051c73fe77bb2&mpshare=1&scene=23&srcid=1111auAYWmr1N0NAs9Wp2hGz&sharer_sharetime=1605145141579&sharer_shareid=5051b3eddbbe2cb698aedf9452370026#rd)】
+- 【[CTF中常见密码题解密网站总结](https://blog.csdn.net/qq_41638851/article/details/100526839)】
+- 【[CTF密码学常见加密解密总结](https://blog.csdn.net/qq_40837276/article/details/83080460)】
+
