记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-23-CTFLearn.md
+++ b/docs/views/numerology/2025-01-23-CTFLearn.md
@@ -36,7 +36,7 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第64天
 
-今日内容：抓包技术-HTTPS协议&APP&小程序&PC应用&WEB&转发联动
+今日内容：算法分析&传输加密&数据格式&密文存储&代码混淆&逆向保护
 
 [[toc]]
 
@@ -402,33 +402,4 @@ sekurlsa::logonpasswords
 以后我们要学习如果用平台或工具解密不出来的，有没有其他的方式解出来，比如爆破、字典等。
 
 
-
-## 代码特性混淆-开发语言
-
-代码混淆-源代码加密&逆向保护
-
-### 案例演示-PHP&JS混淆加密
-
-
-
-### 案例演示-EXE&JAR代码保护
-
-
-
-## 拓展补充参考资料：
-
-### 部分资源：
-
-- https://www.cmd5.com
-- http://www.jsfuck.com
-- http://www.hiencode.com
-- http://www.phpjm.net/
-- http://tool.chacuo.net/cryptaes
-- https://utf-8.jp/public/aaencode.html
-
-### 前人经验总结
-
-- 【[30余种加密编码类型的密文特征分析](https://mp.weixin.qq.com/s?__biz=MzAwNDcxMjI2MA==&mid=2247484455&idx=1&sn=e1b4324ddcf7d6123be30d9a5613e17b&chksm=9b26f60cac517f1a920cf3b73b3212a645aeef78882c47957b9f3c2135cb7ce051c73fe77bb2&mpshare=1&scene=23&srcid=1111auAYWmr1N0NAs9Wp2hGz&sharer_sharetime=1605145141579&sharer_shareid=5051b3eddbbe2cb698aedf9452370026#rd)】
-- 【[CTF中常见密码题解密网站总结](https://blog.csdn.net/qq_41638851/article/details/100526839)】
-- 【[CTF密码学常见加密解密总结](https://blog.csdn.net/qq_40837276/article/details/83080460)】
 
