记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-24-CTFLearn.md
+++ b/docs/views/numerology/2025-01-24-CTFLearn.md
@@ -37,7 +37,7 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第65天
 
-今日内容：抓包技术-HTTPS协议&APP&小程序&PC应用&WEB&转发联动
+今日内容：算法分析&传输加密&数据格式&密文存储&代码混淆&逆向保护
 
 [[toc]]
 
