--- a/docs/views/numerology/2025-01-25-CTFLearn.md
+++ b/docs/views/numerology/2025-01-25-CTFLearn.md
@@ -35,7 +35,7 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第66天
 
-今日内容：抓包技术-HTTPS协议&APP&小程序&PC应用&WEB&转发联动
+今日内容：算法逆向&散列对称非对称&JS源码逆向&AES&DES&RSA&SHA
 
 [[toc]]
 
@@ -47,7 +47,7 @@ publish: true
 
 
 
-## 算法加密-概念&分类&类型
+## 一、算法加密-概念&分类&类型
 
 ------
 
@@ -113,11 +113,7 @@ RSA、RSA2、PKCS
 
 
 
-## 加密解密-识别特征&解密条件
-
-------
-
-
+## 二、加密解密-识别特征&解密条件
 
 ### MD5密文特点：
 
@@ -130,7 +126,7 @@ RSA、RSA2、PKCS
 
 解密原理是碰撞，一个固定的值的密文是固定的，是不会有区别的，所以可以把常见密码加密为MD5格式，然后去和刚才的密文做碰撞，所以明文设置的越难越不容易被碰撞出来。
 
-### 举例：
+### MD5举例：
 
 - 比如1的密文是xxxx
 - 比如2的密文是yyyy
@@ -139,6 +135,22 @@ RSA、RSA2、PKCS
 比如我们的密码是`123`，加密后是`xxxxyyyyzzzz`，而解密的人提前准备好123的密文，也就是`xxxxyyyyzzzz`，会正好碰撞到我们的密文上。
 
 如果明文太过复杂，比如`asdjkl12313213!@dj`，这种情况就极难碰撞，因为可能性太多了，而可能性组合起来太多了，导致复杂密文无法去匹配。
+
+------
+
+
+
+### BASE64编码特点：
+
+1. 大写小写区分，通过数字和字母组合
+
+2. 一般情况下文尾都会有两个等于号，明文很少的时候泽没有
+
+   一般明文是带数字的会有一个或者两个等于号
+
+   ![image-20250126223805778](/img/ctfLearn/image-20250126223805778.png)
+
+3. 明文越长密文越长，一般不会出现`/`这样的符号在密文中（AES、DES中经常会出现这个符号）
 
 ------
 
@@ -165,20 +177,24 @@ RSA、RSA2、PKCS
 
 ### RSA密文特点：
 
-特征同AES、DES相似，但长度较长
+特征同AES、DES相似，但长度较长（对比AES、DES来说特别长，但按规律来说密文大概长度都差不多）
 
-### 解密需求：
+![image-20250126224352548](/img/ctfLearn/image-20250126224352548.png)
+
+### RSA解密需求：
 
 - 密文是必须的
 - 公钥和私钥二者有其一即可
+- 非对称加密的公私钥互逆性，一种是用公钥加密、私钥解密；另一种是私钥加密、公钥解密。
+- 密文的长度不随明文长度而改变，密文的长度基本都是固定在一个范围内的
 
 ------
 
 
 
-## 解密实例-密文存储&数据传输
+## 三、解密实例-密文存储&数据传输
 
-### 案例演示-JS加密
+### 案例演示-对称加密AES加密
 
 ![image-20250125220725937](/img/ctfLearn/image-20250125220725937.png)
 
@@ -455,7 +471,7 @@ echo "<hr>";
 
 - key=1234567891234567
 
-- lv没有
+- iv偏移量没有（因为ECB模式没有偏移量）
 
 - cipher mode(加密模式)=ECB
 
@@ -465,4 +481,46 @@ echo "<hr>";
 
 
   ![image-20250125223908415](/img/ctfLearn/image-20250125223908415.png)
+
+同理，如果我们拿到密文，也已知以上条件的话，也可以在【[CaptfEncoder](https://github.com/guyoung/CaptfEncoder)】工具中解密，如下图：
+
+![image-20250126193112375](/img/ctfLearn/image-20250126193112375.png)
+
+解密得到的结果和加密前是一样的，此外还需要明白如果我们以上条件之一错误都会导致解密不出来。最关键的是Key，其他的条件可以试出来，但key太难试出来了。所以AES的加密最关键的就是Key。
+
+------
+
+
+
+### 案例演示-对称加密DES CBC模式加密
+
+阅读js源码，找到DES CBC模式加密的部分：
+
+- key密码=key123456
+
+- iv偏移量=iv123456
+
+- cipher mode(加密模式)=CBC
+
+- Padding mode(填充模式)=ZeroPadding
+
+- Output mode(输出模式)=Base64
+
+![image-20250126201118979](/img/ctfLearn/image-20250126201118979.png)
+
+我们尝试在【[CaptfEncoder](https://github.com/guyoung/CaptfEncoder)】工具中解密提示Error:InvalidKeyIvLength，key密码或者偏移量错误，我们尝试用【[在线解密工具](http://tool.chacuo.net/cryptdes)】解密，发现是可以解密的：
+
+![image-20250126201422726](/img/ctfLearn/image-20250126201422726.png)
+
+> 后通过在另一款【[在线工具](http://www.hiencode.com/cdes.html)】尝试后得知，key需要64bits，一个字母或者数字占一个8bits，也就是一个字节，key只可以有8个字母或者数字；iv偏移量有8bytes，意思是8个字节，也就是8为字母或者数字。这里给出的key是key123456是错的，需要写成key12345，iv值的位数是正确的。
+
+![image-20250126202345655](/img/ctfLearn/image-20250126202345655.png)
+
+> 从图中可以看到，在解密后有未识别的方块，这是编码格式造成的不识别，归根结底应该是因为：
+>
+> 对称性加密一般会按照固定长度，把待加密字符串分成块。不足一整块或者刚好最后有特殊填充字符。往往跨语言做DES加密解密，经常会出现问题。往往是填充方式不对、或者编码不一致、或者选择加密解密模式没有对应上造成。
+
+------
+
+
 
