记录本体项目代码修改部分

--- a/docs/views/numerology/2025-01-25-CTFLearn.md
+++ b/docs/views/numerology/2025-01-25-CTFLearn.md
@@ -144,7 +144,7 @@ RSA、RSA2、PKCS
 
 1. 大写小写区分，通过数字和字母组合
 
-2. 一般情况下文尾都会有两个等于号，明文很少的时候泽没有
+2. 一般情况下文尾都会有两个等于号，明文很少的时候则没有
 
    一般明文是带数字的会有一个或者两个等于号
 
