记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-01-CTFLearn.md
+++ b/docs/views/numerology/2025-02-01-CTFLearn.md
@@ -194,3 +194,4 @@ User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML,
 
 ![image-20250201214012785](/img/ctfLearn/image-20250201214012785.png)
 
+这种其实可以把登录后的Cookie放到未登录的Cookie中，就能进入后台页面
