记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-02-CTFLearn.md
+++ b/docs/views/numerology/2025-02-02-CTFLearn.md
@@ -1,5 +1,5 @@
 ---
-title: 20250202CTF学习笔记56
+title: 20250202CTF学习笔记55
 date: 2025-02-02
 tags:
  - CTF
@@ -128,7 +128,42 @@ publish: true
 
 
 
-### 案例演示-文件探针&爆破登录
+### 案例演示-BurpSuite-文件探针
 
-先使用BurpSuite抓包，将我们需要的路径抓包抓下来，
 
+
+尝试使用BurpSuite抓包，我们的目标是【[封神台靶场](http://pu2lh35s.ia.aqlab.cn/)】，用插件代理到burpsuite的端口8080中，打开监听，重新请求就能看到对应的包了，我们将包发到攻击器：
+
+![image-20250203085537631](/img/ctfLearn/image-20250203085537631.png)
+
+我们切换到Intruder，这里已经有了我们刚才发过来的数据包，且我们键入一个参数，然后点击添加，这意味着这个地方是变量，随时会变动：
+
+![image-20250203090318380](/img/ctfLearn/image-20250203090318380.png)
+
+> 这里发现burp显示中文乱码，我们尝试解决一下这个问题。到BurpSuite右上角的Settings-User Interface中的HTTP message display将字体改为宋体10pt，然后将Character sets设置为UTF-8，【[教程](https://blog.csdn.net/jrain0803/article/details/145033297)】
+
+然后我们切换到Payloads页面，点击load加载字典，这就是我们刚才的参数payload参数变动的规则：
+
+![image-20250203090719284](/img/ctfLearn/image-20250203090719284.png)
+
+这里可以去Settins中，将`Error  handling`中的`Number of retries on network failure`设置为5线程
+
+![image-20250203094142251](/img/ctfLearn/image-20250203094142251.png)
+
+最后我们点击start attack，就会弹出以下页面，就是开始执行了：
+
+![image-20250203094428101](/img/ctfLearn/image-20250203094428101.png)
+
+发现个问题，这里加载了字典，但是字典里几乎没一行都会有斜杠，而burpsuite自动将这个斜杠转码了，造成所有的访问都是404了：
+
+![image-20250203094706650](/img/ctfLearn/image-20250203094706650.png)
+
+这就需注意一个小细节，在Payloads页中，将`URL-encode these characters`这个选项关闭：
+
+![image-20250203095051833](/img/ctfLearn/image-20250203095051833.png)
+
+这次我们重新攻击，发现有部分访问是200 OK的：
+
+![image-20250203095209193](/img/ctfLearn/image-20250203095209193.png)
+
+以上用BurpSuite来扫描其实是和我们用御剑2珍藏版原理是一样的
