记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-03-CTFLearn.md
+++ b/docs/views/numerology/2025-02-03-CTFLearn.md
@@ -29,8 +29,6 @@ publish: true
 
 
 
-
-
 ---
 
 <Boxx/>
@@ -49,5 +47,55 @@ publish: true
 
 ## 数据-方法&头部&状态码
 
-案例演示-BurpSuite-爆破解密
+### 案例演示-BurpSuite-爆破解密
+
+视频中演示的是zblog小迪博客的密码爆破，我们没有部署这个zblog，我们换一个可以爆破的网站，比如Pikachu漏洞练习平台上的`暴力破解-基于表单的暴力破解`
+
+我们这个pikachu是运行在虚拟机的，我们尝试用IP地址在物理机访问[Get the pikachu](http://192.168.8.24/pikachu/vul/burteforce/bf_form.php)
+
+![image-20250204213545354](/img/ctfLearn/image-20250204213545354.png)
+
+然后我们用BurpSuite工具抓包，还是之前抓包的步骤，去抓一个提交密码的包，然后我们右键发送到重发器
+
+![image-20250204213523328](/img/ctfLearn/image-20250204213523328.png)
+
+我们修改一下这里的参数，尝试去猜这个密码：
+
+![image-20250204213759715](/img/ctfLearn/image-20250204213759715.png)
+
+这里我们用到的pikachu的密码是没有经过加密的，视频中的zblog的密码是经过加密的。
+
+视频中提交的参数是：
+
+```
+edtUserName=adming&edtPassWord=123456&btnPost=xxx&username=admin&password=e10adc3949ba59abbe56e057f20f883e
+```
+
+这里第一是需要将数据包发送到Intruder攻击器中：
+
+![image-20250204215041016](/img/ctfLearn/image-20250204215041016.png)
+
+第二是需要明文和密文一起改，明文和密文都对应上才行。所以在密码的明文和密文这两个地方点击Add加上变量。（我们的演示环境没有加密，这一步就不演示了）
+
+这里选择自定义模式：
+
+![image-20250204215208687](/img/ctfLearn/image-20250204215208687.png)
+
+然后到Payloads页面，选择第一个参数：
+
+![image-20250204215344081](/img/ctfLearn/image-20250204215344081.png)
+
+我们加载我们的密码字典，视频中演示的第一个Payload加载的是我们的字典，然后第二个Payload加载的也是我们的相同的字典，但需要加Payload Processing
+
+![image-20250204215812728](/img/ctfLearn/image-20250204215812728.png)
+
+这时候重新去请求，就会发现password密码是加密过的edtPassWord了（这里不演示加密）：
+
+![image-20250204221716124](/img/ctfLearn/image-20250204221716124.png)
+
+这里发现如果返回的字符串长度变化不大的话，很难从列表里找到我们的密码。
+
+最后，视频中演示的特殊情况是：第一个参数是任意值，第二个参数只要是正确的密文即可登录成功。
+
+![image-20250204222718620](/img/ctfLearn/image-20250204222718620.png)
 
