记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-08-CTFLearn.md
+++ b/docs/views/numerology/2025-02-08-CTFLearn.md
@@ -35,7 +35,7 @@ publish: true
 
 从0开始学习CTF，了解CTF基本规则、方法，这是开始打卡学习的第75天
 
-今日内容：ChatGPT篇&注册体验&结合安全&融入技术&高效赋能&拓展需求
+今日内容：信息打点-Web应用&企业产权&指纹识别&域名资产&网络空间&威胁情报
 
 [[toc]]
 
@@ -43,6 +43,188 @@ publish: true
 
 <!-- more -->
 
-# 第27章：ChatGPT篇&注册体验&结合安全&融入技术&高效赋能&拓展需求
+# 第27章：信息打点-Web应用&企业产权&指纹识别&域名资产&网络空间&威胁情报
 
-今日请假，明天补上
+> 最近学习略有懈怠，月底有两个考试，产生懈怠情绪很不应该。
+
+## 知识点
+
+1. 业务资产-应用类型分类
+2. Web单域名获取-接口查询
+3. Web子域名获取-解析枚举
+4. Web架构资产-平台指纹识别
+
+今天只讲Web应用，还需要一道两节课才能讲完
+
+
+
+## 章节点
+
+- Web：语言/CMS/中间件/数据库/系统/WAF等
+- 系统：操作系统/端口服务/网络环境/防火墙等
+- 应用：APP对象/API接口/微信小程序/PC应用等
+- 架构：CDN/前后端/云应用/站库分离/OSS资源等
+- 技术：指纹识别/端口扫描/CDN绕过/WAF识别/Github监控等
+
+
+
+## 资源导航
+
+| 标签       | 名称         | 地址                                 |
+| ---------- | ------------ | ------------------------------------ |
+| 企业信息   | 天眼查       | https://www.tianyancha.com/          |
+| 企业信息   | 小蓝本       | https://www.xiaolanben.com/          |
+| 企业信息   | 爱企查       | https://aiqicha.baidu.com/           |
+| 企业信息   | 企查查       | https://www.qcc.com/                 |
+| 企业信息   | 国外企查     | https://opencorporates.com/          |
+| 企业信息   | 启信宝       | https://www.qixin.com/               |
+| 备案信息   | 备案信息查询 | http://www.beianx.cn/                |
+| 备案信息   | 备案管理系统 | https://beian.miit.gov.cn/           |
+| 公众号信息 | 搜狗微信搜索 | https://weixin.sogou.com/            |
+| 注册域名   | 域名注册查询 | https://buy.cloud.tencent.com/domain |
+| IP反查     | IP反查域名   | https://x.threatbook.cn/             |
+| IP反查     | IP反查域名   | http://dns.bugscaner.com/            |
+
+
+
+| 标签     | 名称                   | 地址                                   |
+| -------- | ---------------------- | -------------------------------------- |
+| DNS数据  | dnsdumpster            | https://dnsdumpster.com/               |
+| 证书查询 | CertificateSearch      | https://crt.sh/                        |
+| 网络空间 | FOFA                   | https://fofa.info/                     |
+| 网络空间 | 全球鹰                 | http://hunter.qianxin.com/             |
+| 网络空间 | 360                    | https://quake.360.cn/quake/            |
+| 威胁情报 | 微步在线 情报社区      | https://x.threatbook.cn/               |
+| 威胁情报 | 奇安信 威胁情报中心    | https://ti.qianxin.com/                |
+| 威胁情报 | 360 威胁情报中心       | https://ti.360.cn/#/homepage           |
+| 枚举解析 | 在线子域名查询         | http://tools.bugscaner.com/subdomain/  |
+| 枚举解析 | DNSGrep子域名查询      | https://www.dnsgrep.cn/subdomain       |
+| 枚举解析 | 工具强大的子域名收集器 | https://github.com/shmilylty/OneForAll |
+
+
+
+| 标签     | 名称             | 地址                                       |
+| -------- | ---------------- | ------------------------------------------ |
+| 指纹识别 | 在线cms指纹识别  | http://whatweb.bugscaner.com/look/         |
+| 指纹识别 | Wappalyzer       | https://github.com/AliasIO/wappalyzer      |
+| 指纹识别 | TideFinger潮汐   | http://finger.tidesec.net/                 |
+| 指纹识别 | 云悉指纹         | https://www.yunsee.cn/                     |
+| 指纹识别 | WhatWeb          | https://github.com/urbanadventurer/WhatWeb |
+| 指纹识别 | 数字观星Finger-P | https://fp.shuziguanxing.com/#/            |
+
+
+
+| 标签     | 名称                   | 地址                                  |
+| -------- | ---------------------- | ------------------------------------- |
+| 网络空间 | 钟馗之眼               | https://www.zoomeye.org/              |
+| 网络空间 | 零零信安               | https://0.zone/                       |
+| 网络空间 | Shodan                 | https://www.shodan.io/                |
+| 网络空间 | Censys                 | https://censys.io/                    |
+| 网络空间 | ONYPHE                 | https://www.onyphe.io/                |
+| 网络空间 | FullHunt               | https://fullhunt.io/                  |
+| 网络空间 | Soall Search Engine    | https://soall.org/                    |
+| 网络空间 | Netlas                 | https://app.netlas.io/responses/      |
+| 网络空间 | Leakix                 | https://leakix.net/                   |
+| 网络空间 | DorkSearch             | https://dorksearch.com/               |
+| 威胁情报 | VirusTotal在线查杀平台 | https://www.virustotal.com/gui/       |
+| 威胁情报 | VenusEye 威胁情报中心  | https://www.venuseye.com.cn/          |
+| 威胁情报 | 绿盟科技 威胁情报云    | https://ti.nsfocus.com/               |
+| 威胁情报 | IBM 情报中心           | https://exchange.xforce.ibmcloud.com/ |
+| 威胁情报 | 天际友盟安全智能平台   | https://redqueen.tj-un.com            |
+| 威胁情报 | 华为安全中心平台       | https://isecurity.huawei.com/sec      |
+| 威胁情报 | 安恒威胁情报中心       | https://ti.dbappsecurity.com.cn/      |
+| 威胁情报 | AlienVault             | https://otx.alienvault.com/           |
+| 威胁情报 | 深信服                 | https://sec.sangfor.com.cn/           |
+| 威胁情报 | 丁爸情报分析师的工具箱 | http://dingba.top/                    |
+| 威胁情报 | 听风者情报源 start.me  | https://start.me/p/X20Apn             |
+| 威胁情报 | GreyNoise Visualizer   | https://viz.greynoise.io/             |
+| 威胁情报 | URLhaus 数据库         | https://urlhaus.abuse.ch/browse/      |
+| 威胁情报 | Pithus                 | https://beta.pithus.org/              |
+
+
+
+## 业务资产
+
+我们设身处地想一下，我们是有一个目标需求的，对方给到你的是一个IP地址、一个网站、还是一个公司名，都有可能。我们最好是给个目标的名称，比如某企业、某学校等。如果是给的IP，就只是对单个地址分析。
+
+### 案例演示-爱企查的使用
+
+表格中我们展示了各种企业查询的网站，我们用【[爱企查](https://aiqicha.baidu.com/)】（pdd可以开会员）：
+
+![image-20250209211121991](/img/ctfLearn/image-20250209211121991.png)
+
+然后我们用【[补天漏洞响应平台](https://www.butian.net/)】找到项目大厅下的企业名称信息。
+
+我们尝试补天中的公司名来爱企查搜索信息：
+
+![image-20250209211651872](/img/ctfLearn/image-20250209211651872.png)
+
+我们主要是查看其中的知识产权部分：
+
+![image-20250209211930177](/img/ctfLearn/image-20250209211930177.png)
+
+这里我们还看到可能会有APP、公众号等：
+
+- APP对我们的作用是：可能会有新的服务、应用等，和官网可能是分开的，可能APP才是核心业务
+- 微信公众号也是一样的道理，有些微信公众号是需要外接其他域名，比如需要扫一扫登录、需要登录的网站，所以从公众号可以拿到目标其他的资产。
+
+以上演示的是爱企查，如果想用免费版的，可以用【[小蓝本](https://www.xiaolanben.com/)】，但小蓝本可能数据不够全面。
+
+
+
+### 总结
+
+案例中演示的这种主要是查业务范围、APP、新媒体、网址等。此外还有个信息没讲，可能会有分公司公司或者旗下公司等其他公司，这要看具体挖洞要求，如果说没有挖旗下公司的需求的话是不算的。
+
+
+
+## 资产类型
+
+1. Web应用
+2. APP应用
+3. PC端应用
+4. 小程序应用
+5. 微信公众号
+6. 其他产品等
+
+
+
+## Web应用
+
+### 针对Web单域名的情况
+
+**第一步：**单域名是首先【[备案信息查询网](http://www.beianx.cn/)】这个网站查备案信息，我们还沿用刚才的例子，查询结果为：
+
+![image-20250209214758508](/img/ctfLearn/image-20250209214758508.png)
+
+我们搜集信息要全面，从备案信息查和爱企查可能结果会不一样，查询网站的侧重点不一样，导致的信息不一样。
+
+
+
+**第二步：**这一步就是刚才案例演示用用爱企查、企查查、天眼查等去查公司的知识产权信息。
+
+![image-20250209211930177](/img/ctfLearn/image-20250209211930177.png)
+
+
+
+**第三步：**我们用【[腾讯云的域名注册功能](https://buy.cloud.tencent.com/domain)】，看域名有没有被占用，这是前两种方法实在找不到的情况下才会用的方法，用这种方法能找到他已经注册，但没有投入使用的域名。根据公司域名相关的关键字，看有没有相近的网站，其可能就是这家公司的资产。
+
+![image-20250209220346333](/img/ctfLearn/image-20250209220346333.png)
+
+
+
+**第四步：**我们用IP地址反查解析，我们访问IP地址的时候，也是可以正常访问的。我们用【[IP反查域名工具-微步在线](https://x.threatbook.cn/)】或者【[IP反查域名工具2](http://dns.bugscaner.com/)】（应该已经挂了。我反正是用不了），这样用IP反查，能解析出域名。这里这个网站应该注册不久，域名解析时间太靠近当前日期了。
+
+![image-20250209222543915](/img/ctfLearn/image-20250209222543915.png)
+
+
+
+**信息搜集的途径：**
+
+1. 备案信息
+2. 企业产权
+3. 注册域名
+4. 反查解析
+
+
+
