记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-09-CTFLearn.md
+++ b/docs/views/numerology/2025-02-09-CTFLearn.md
@@ -136,6 +136,10 @@ publish: true
 
 ![image-20250209230209499](/img/ctfLearn/image-20250209230209499.png)
 
+视频中这一步演示是用的`longi.com`这个网站，通过这种方法找到了新的应用。
+
+缺点：只针对HTTPS才可以用这种方法。
+
 
 
 **第三种：**关于网络空间，目前使用最多的有三个工具：
@@ -145,6 +149,22 @@ publish: true
 - [360quake](https://quake.360.cn/quake/)
 
 这里的网络空间其实就是专门用于爬取数据的平台。
+
+![image-20250210204401291](/img/ctfLearn/image-20250210204401291.png)
+
+根据搜索方法的提示，我们可以用`domain=""`关键字来查询，图中可以看到这些都是qq空间的域名。
+
+![image-20250210204638357](/img/ctfLearn/image-20250210204638357.png)
+
+以下这是用的360的quake来搜索到的结果：
+
+![image-20250210205145679](/img/ctfLearn/image-20250210205145679.png)
+
+最后一种是全球鹰，是奇安信的平台，这个平台不需要开会员，免费赠送积分：
+
+![image-20250210205850629](/img/ctfLearn/image-20250210205850629.png)
+
+以上三个平台是用到的最多的平台，具体语法需要查看相应网站的语法规则。
 
 
 
@@ -156,8 +176,30 @@ publish: true
 
 威胁情报是别人提交过数据，这些工具上会有整理
 
+![image-20250210210333597](/img/ctfLearn/image-20250210210333597.png)
+
+像是奇安信、360威胁情报中心等平台都是一样的道理
+
+![image-20250210210824825](/img/ctfLearn/image-20250210210824825.png)
+
 
 
 **第五种：**关于枚举解析，其实就是暴力破解。比如我们用ping命令，去看子域名能不能正常解析。用的最多的就是这种方式，因为是最有效的。我们也有相应的工具可以使用。
 
 ![image-20250209231116659](/img/ctfLearn/image-20250209231116659.png)
+
+- [在线子域名二级域名查询工具 - 在线工具](http://tools.bugscaner.com/subdomain/)
+- [子域名查询|ip反查域名 - DNSGrep](https://www.dnsgrep.cn/)
+- [OneForAll是一款功能强大的子域收集工具](https://github.com/shmilylty/OneForAll)
+
+这里的`bugscanner`这个工具不能用，得到的结果不准确：
+
+![image-20250210211111777](/img/ctfLearn/image-20250210211111777.png)
+
+我们用另一个dnsgrep平台，得到如下结果：
+
+![image-20250210211237037](/img/ctfLearn/image-20250210211237037.png)
+
+以上工具推荐都来自于【[棱角社区](https://forum.ywhack.com/bountytips.php?tools)】
+
+以上五种方式，可能最终结果会有一定的冲突，只能说各有各的有点，各有各的缺点。
