记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-10-CTFLearn.md
+++ b/docs/views/numerology/2025-02-10-CTFLearn.md
@@ -45,14 +45,13 @@ publish: true
 
 <!-- more -->
 
-# 第27章：信息打点-Web应用&企业产权&指纹识别&域名资产&网络空间&威胁情报
+# 第28章：信息打点-Web应用&企业产权&指纹识别&域名资产&网络空间&威胁情报
 
 ## 工具安装-OneForAll
 
 **环境准备：**
 
 - Python>3.6
-- 
 
 这里需要准备Python环境，需要至少大于3.6，我电脑上有两个版本的Python，一个是3.8，一个是3.10，这两个版本的切换需要注意，这里需要修改环境变量，而修改完成后，需要重新打开一个新的cmd窗口去验证修改成功与否，如果是在修改前打开的cmd窗口会显示修改前的python版本。
 
@@ -144,5 +143,5 @@ OneForAll在默认参数正常执行完毕会在results目录生成相应结果`
 
 纯内网站点如何识别？我们可以使用离线工具，比如WhatWeb工具、CMSMap工具、CMSeek工具等。
 
-
+【[WhatWeb](https://www.whatweb.net/)】
 
