记录本体项目代码修改部分

--- a/docs/views/numerology/2025-02-11-CTFLearn.md
+++ b/docs/views/numerology/2025-02-11-CTFLearn.md
@@ -98,6 +98,8 @@ publish: true
 
 - 最常见的是`网站备份压缩文件`这种情况，比如我们在备份文件的时候，是将源码压缩后还在该路径下的，这种攻击者直接访问该路径下这个压缩包，就能下载这个源码。
 
+  
+
 - 然后是`.git`文件的泄露也很多，这种是针对在发布的时候，没有删除文件夹下的`.git`文件夹，导致可以直接访问这个目录（这在我的开发经验看来不现实，一般不会有这种情况，前端打包都是不带.git文件夹的）类似的，用idea这个工具来开发的话，会自动生成一个`.idea`的文件夹。
 
   ```
@@ -111,6 +113,8 @@ publish: true
   ![image-20250211222028603](/img/ctfLearn/image-20250211222028603.png)
 
   如果执行成功的话，会拿到一些文件，我们从这些文件里观察有没有敏感信息。
+
+  
 
 - .svn泄露和.git是类似的，没有什么大区别。同样的，我们有【[SvnHack工具](https://github.com/callmefeifei/SvnHack)】，同样的，我们用命令执行：
 
@@ -126,11 +130,27 @@ publish: true
 
   > php加密的话，最常见的是zend加密
   
+  
+  
 - DS_Store是mac系统下的文件，是用来`保存如何展示文件/文件夹的数据文件`，每个文件夹下对应一个。
 
   ![image-20250211225416095](/img/ctfLearn/image-20250211225416095.png)
 
-  这里用到了【[ds_store工具](https://github.com/lijiejie/ds_store_exp)】
+  这里用到了【[ds_store工具](https://github.com/lijiejie/ds_store_exp)】去恢复目录。
+
+  ![image-20250212194319120](/img/ctfLearn/image-20250212194319120.png)
+
+  这时候可以观察到一个情况，我们虽然恢复了，但只是恢复了一些目录。得到的只是目录架构，其他的一些文件如果没用到，就能得到，如果没用到就没有。
+
+  就像我们用IDEA去开发程序的时候，我们在项目原有的程度上，再加一点其他的东西，比如我们开发的时候有100个文件夹，我们开发完成后在文件夹里加了1个文件夹，这样是不会影响到`.idea`的。就像我先用IDEA开发，再用VScode开发，这就同样的道理，不会影响到`.idea`。
+
+  
+
+- composer.json泄露，这个是和Git类似的，就是个开发自带的文件
+
+  ![image-20250212225550962](/img/ctfLearn/image-20250212225550962.png)
+
+  这里没找到相关案例，直接截视频中的图。这个漏洞只针对PHP
 
 - 其他的漏洞有些要么是太老了，要么找不到案例。
 
@@ -138,6 +158,7 @@ publish: true
 
 ### 源码泄露集合
 
+- composer.json泄露
 - git源码泄露
 - svn源码泄露
 - hg源码泄露
